--- a/index.html
+++ b/index.html
@@ -10,7 +10,39 @@
 </head>
 <body>
   <div class="container">
+<header class="header">
+<h4 class="title">Live User Filter</h4>
+<small class="subtitle">Search by name and/or location</small>
+<input id="filter" type="text" placeholder="Search">
+</header>
+<ul id="result" class="user-list">
+<li>
+<img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
+<div class="user-info">
+<h4>Sarah Smith</h4>
+<p>Wexford, Ireland</p>
+</div>
+</li>
 
+<li>
+<img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
+<div class="user-info">
+<h4>Sarah Smith</h4>
+<p>Wexford, Ireland</p>
+</div>
+</li>
+
+<li>
+<img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
+<div class="user-info">
+<h4>Sarah Smith</h4>
+<p>Wexford, Ireland</p>
+</div>
+</li>
+<li>
+<h3>Loading...</h3>
+</li>
+</ul>
   </div>
  <script type='text/javascript' src='script.js'></script>
 </body>
